2012-05-24  Araki Ken  <arakikenS@users.sf.net>

	* xlib/x_window.c: If background color is changed, margin area is cleared
	  in x_window_set_bg_color().

	* ml_vt100_parser.c:
	  OSC 5;0 and OSC 5;1 are supported.

	* ml_vt100_parser.c, x_color_config.c, x_color_manager.c:
	  - "?" which query color spec in OSC 4, 10, 11 and 12 is ignored.
	  - If unknown color name is specified for fg color, it falls back to white.
	  (Related to SF Bug #3528836, Thanks to Thomas Wolff)

	* kik_mem.h, x_imagelib.c: If glib/galloca.h is included before kik_mem.h,
	  alloca check in kik_mem.h is disabled.

	* kiklib/configure.in, kik_config.h.in, kik_unistd.[ch]:
	  If setenv doesn't exist, __kik_setenv is used instead.
	  (Related to SF Bug #3509744, Thanks to Thomas Wolff)

	* version.h.in: 3.1.2 => 3.1.2 post

2012-05-19  Araki Ken  <arakiken@users.sf.net>

	* 3.1.2 released.
	  (tag "rel-3_1_2")

	* configure.in, mlterm.spec, xwindow/version.h.in,
	  doc/en/ReleaseNote: updated for 3.1.2.

	* README, doc/en/README.win32, doc/ja/README.win32, gtk/INSTALL: Updated.

	* x_screen.c, x_screen_manager.c, doc/en/PROTOCOL:
	  "close_pty" command is added to configuration protocol.

	* x_screen.c: ml_term_write( term) is replaced by ml_term_write( screen->term)
	  in get_config().

	* mc_im.c: Current directory is searched for im-xxx modules
	  if IM_DIR is not found.

	* mlterm-menu.c: Ptys attached to other screens are not displayed in the menu list.

	* ml_vt100_parser.c:
	  - buf length < vt100_parser->r_buf.len is checked.
	  - Pp of DA2 is changed from 0 (xterm default) to 1(VT220).

	* x_screen_manager.c: Minor fixes.

	* x_event_source.h: Minor fixes.

	* ml_screen.c: Minor fixes.

2012-05-17  Araki Ken  <arakiken@users.sf.net>

	* doc/ja/README.win32, doc/en/README.win32: Updated.

	* x_main_config.c, win32/x_window.c, win32/x_win32.h:
	  -g +X+Y is possible to be specified.

	* configure.in, x_im_candidate_screen, x_im_status_screen.c,