@@ -1,3 +1,11 @@
+ver 3.1.3
+* Support OSC 5;0 and OSC 5;1.
+* Merge SF patches:
+  #3529392 (Thanks to Ahmed El-Mahmoudy)
+  #3529386 (Thanks to Ahmed El-Mahmoudy)
+* Bug fixes:
+  #3528836 (Thanks to Thomas Wolff)
+
 ver 3.1.2
 * Support extended mouse tracking mode.
   (CSI ? 1006 h and CSI ? 1006 l / CSI ? 1015 h and CSI ? 1015 l)
